Bug 433855 - Settings for "Hide reconciled transactions" are not synced
Summary: Settings for "Hide reconciled transactions" are not synced
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.1
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-02 12:42 UTC by Ralf Habacker
Modified: 2021-03-08 21:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2021-03-02 12:42:38 UTC
SUMMARY
Hiding reconciled transactions can be done from the "View" menu and the "General settings" page, but changing the setting in the menu will not be transferred to the other location.
 
STEPS TO REPRODUCE
1. start kmymoney
2. open a file with reconciled transactions
3. open a ledger to show that reconciled transactions
4. Click on menu view->hide reconciled transactions
5. Open the filters tab from the general page of the settings dialog
6. Change the state of the option "Do not show reconciled transactions", so that reconciled transaction are shown
7. Press Ok to leave the settings dialog
8. Inspect the view menu

OBSERVED RESULT
The entry for hiding the reconciled transactions is still checked  

EXPECTED RESULT
The entry for hiding the reconciled transactions should reflect the state of the current setting.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap.15.2
KDE Frameworks Version: 5.71.0
Qt Version: 5.12
Comment 1 Bug Janitor Service 2021-03-02 13:07:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/office/kmymoney/-/merge_requests/62
Comment 2 Ralf Habacker 2021-03-08 21:37:42 UTC
Git commit ace558ab92cf29b9f7258a6d96fb87a1ffbf197b by Ralf Habacker.
Committed on 08/03/2021 at 20:17.
Pushed by habacker into branch '5.1'.

Fix 'Settings for "Hide reconciled transactions" are not synced'

The associated view menu entry was not synced with changes from the
settings dialog.
FIXED-IN: 5.1.2

M  +4    -1    kmymoney/kmymoney.cpp

https://invent.kde.org/office/kmymoney/commit/ace558ab92cf29b9f7258a6d96fb87a1ffbf197b