Fix 'Settings for "Hide reconciled transactions" are not synced'

The associated view menu entry was not synced with changes from the
settings dialog.

BUG: 433855
FIXED-IN: 5.1.2